[gd_scene load_steps=12 format=4 uid="uid://baoeaqgwvwynb"]

[ext_resource type="Script" uid="uid://li3ex6wk3k4u" path="res://Scripts/道具/environment_object.gd" id="1_ibinw"]
[ext_resource type="Texture2D" uid="uid://bkg0if5fxyfoj" path="res://Assets/Mesh/花瓶_PSXVaseTexture(Texturer_Com).png" id="1_p7rw6"]
[ext_resource type="AudioStream" uid="uid://nl4iu08da25l" path="res://Assets/Sound/陶瓷破裂.wav" id="3_25tgq"]
[ext_resource type="Script" uid="uid://c4gihqpm471ci" path="res://addons/destruction/destruction.gd" id="6_224lq"]
[ext_resource type="Script" uid="uid://ek6rts6wyf8f" path="res://Scripts/道具/carryable_component.gd" id="6_4137t"]
[ext_resource type="PackedScene" uid="uid://b6n2woun5nb0i" path="res://Scenes/花瓶打破.tscn" id="7_t2n7h"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_radro"]
resource_name = "Material.001"
cull_mode = 2
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_texture = ExtResource("1_p7rw6")
roughness = 0.4
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_i3lt2"]
_surfaces = [{
"aabb": AABB(-0.210994, -0.223658, -0.215903, 0.421989, 0.515279, 0.417694),
"format": 34896613377,
"index_count": 714,
"index_data": PackedByteArray("TQADAAEATQBOAAMATgAFAAMATgBPAAUATwAHAAUATwBQAAcAUAAJAAcAUABRAAkAUQALAAkAUQBSAAsAUgANAAsAUgBTAA0AUwAPAA0AUwBUAA8AVAARAA8AVABVABEAVQATABEAVQBWABMACwBnAAkACwBoAGcAVgAVABMAVgBXABUAVwABABUAVwBNAAEAFAACAAAAAgAGAAQABgAKAAgACgAOAAwADgASABAAEgACABQAAgAKAAYACgASAA4AAgASAAoANQAWACAANQA2ABYANAAgAB8ANAA1ACAAMwAfAB4AMwA0AB8AMgAeAB0AMgAzAB4AMQAdABwAMQAyAB0AMAAcABsAMAAxABwALwAbABoALwAwABsALgAaABkALgAvABoALQAZABgALQAuABkALAAYABcALAAtABgANgAXABYANgAsABcASwAhACsASwBMACEASgArACoASgBLACsASQAqACkASQBKACoASAApACgASABJACkARwAoACcARwBIACgARgAnACYARgBHACcARQAmACUARQBGACYARAAlACQARABFACUAQwAkACMAQwBEACQAQgAjACIAQgBDACMATAAiACEATABCACIAAAAsADYAAAACACwAAgAtACwAAgAEAC0ABAAuAC0ABAAGAC4ABgAvAC4ABgAIAC8ACAAwAC8ACAAKADAACgAxADAACgAMADEADAAyADEADAAOADIADgAzADIADgAQADMAEAA0ADMAEAASADQAEgA1ADQAEgAUADUAFAA2ADUAFAAAADYAYQA3AEEAYQBiADcAYABBAEAAYABhAEEAXwBAAD8AXwBgAEAAXgA/AD4AXgBfAD8AXQA+AD0AXQBeAD4AXAA9ADwAXABdAD0AWwA8ADsAWwBcADwAWgA7ADoAWgBbADsAWQA6ADkAWQBaADoAWAA5ADgAWABZADkAYgA4ADcAYgBYADgAFgBCAEwAFgAXAEIAFwBDAEIAFwAYAEMAGABEAEMAGAAZAEQAGQBFAEQAGQAaAEUAGgBGAEUAGgAbAEYAGwBHAEYAGwAcAEcAHABIAEcAHAAdAEgAHQBJAEgAHQAeAEkAHgBKAEkAHgAfAEoAHwBLAEoAHwAgAEsAIABMAEsAIAAWAEwAQQBNAFcAQQA3AE0AQABXAFYAQABBAFcAPwBWAFUAPwBAAFYAPgBVAFQAPgA/AFUAPQBUAFMAPQA+AFQAPABTAFIAPAA9AFMAOwBSAFEAOwA8AFIAOgBRAFAAOgA7AFEAOQBQAE8AOQA6AFAAOABPAE4AOAA5AE8ANwBOAE0ANwA4AE4AIQBYAGIAIQAiAFgAIgBZAFgAIgAjAFkAIwBaAFkAIwAkAFoAJABbAFoAJAAlAFsAJQBcAFsAJQAmAFwAJgBdAFwAJgAnAF0AJwBeAF0AJwAoAF4AKABfAF4AKAApAF8AKQBgAF8AKQAqAGAAKgBhAGAAKgArAGEAKwBiAGEAKwAhAGIAawB1AGoAawB2AHUACQBmAAcACQBnAGYAAwBkAAEAAwBjAGQABwBlAAUABwBmAGUAAQBtABUAAQBkAG0ABQBjAAMABQBlAGMAFQBsABMAFQBtAGwAEwBrABEAEwBsAGsAEQBqAA8AEQBrAGoADwBpAA0ADwBqAGkADQBoAAsADQBpAGgAcABvAG4AbwB3AHgAdwB1AHYAdQBzAHQAcwBxAHIAcQBvAHAAbwB1AHcAdQBxAHMAbwBxAHUAaAByAGcAaABzAHIAZQBuAGMAZQBwAG4AbAB2AGsAbAB3AHYAaQBzAGgAaQB0AHMAZgBwAGUAZgBxAHAAbQB3AGwAbQB4AHcAagB0AGkAagB1AHQAZwBxAGYAZwByAHEAZAB4AG0AZABvAHgAYwBvAGQAYwBuAG8A"),
"lods": [0.223938, PackedByteArray("TQADAAEATQBOAAMATgAHAAMATgBQAAcAUAALAAcAUABSAAsAUgARAAsAUgBTABEAUwBVABEAVQAVABEAVQBXABUACwBmAAcACwBoAGYABwBmAGMABwBjAAMAVwABABUAVwBNAAEAFAACAAAAEAACABQAAgAQAAoAAgAKAAYACgBLACcAEABLAAoAMAAKACcASwApACgAJwBLACgAMAAnACYASwArACoASwAqACkASwAhACsASwBMACEAFABMAEsAFAAAAEwALAAmACUALAAlACQALAAwACYABgAwACwABgAKADAAAgAGACwAIwAsACQALAAjACIATAAiACEATAAsACIAAAACACwAAAAsAEwAEAAUAEsAYQA3AEEAYQBiADcAYABBAD8AYABhAEEAXwBgAD8AXgBfAD8AXQA/AD0AXQBeAD8AXAA9ADwAXABdAD0AWwA8ADoAWwBcADwAWgBbADoAWQBaADoAWAA6ADgAWABZADoAYgA4ADcAYgBYADgAQQBNAFcAQQA3AE0APwBXAFUAPwBBAFcAPQA/AFUAPQBVAFMAPABTAFIAPAA9AFMAOgBSAFAAOgA8AFIAOAA6AFAAOABQAE4ANwBOAE0ANwA4AE4AIQBYAGIAIQAiAFgAIgBZAFgAIgAjAFkAIwBaAFkAIwAkAFoAJABbAFoAJAAlAFsAJQBcAFsAJQAmAFwAJgBdAFwAJgAnAF0AJwBeAF0AJwAoAF4AKABfAF4AKAApAF8AKQBgAF8AKQAqAGAAKgBhAGAAKgArAGEAKwBiAGEAKwAhAGIAAwBkAAEAAwBjAGQAAQBtABUAAQBkAG0AFQBqABEAFQBtAGoAEQBqAGgAEQBoAAsAcQBvAG4AbwBxAHUAdQBxAHMAbwB1AHgAaABxAGYAaABzAHEAZgBxAG4AZgBuAGMAagBzAGgAagB1AHMAbQB1AGoAbQB4AHUAZAB4AG0AZABvAHgAYwBvAGQAYwBuAG8A")],
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 121,
"vertex_data": PackedByteArray("/38AAGA+AAD/f/n0S1kAAIekAAA2SQAAIJb59NtfAAB2vQAASGYAADql+fR3cQAA4sIAAFyMAACCqPn0h4gAABCzAABZrwAA7p759LmdAAAJkwAAJcQAAIeL+fRRqgAA9WwAACXEAAB3dPn0UaoAAO5MAABZrwAAEGH59LmdAAAcPQAAXIwAAHxX+fSHiAAAiEIAAEhmAADEWvn0d3EAAHdbAAA2SQAA3mn59NtfAAD/f0+PAAAAAOnFT4+9FAAAoPVPj19MAAD//0+PPJUAALrhT48y2AAAbqRPj///AACQW0+P//8AAEQeT48y2AAAAABPjzyVAABeCk+PX0wAABU6T4+9FAAA/39Q3sxOAAC+m1DeB1cAAK6uUN4bbQAAy7JQ3gWKAADIplDemKQAAHSOUN5ktAAAinFQ3mS0AAA2WVDemKQAADNNUN4FigAAUFFQ3httAABAZFDeB1cAAMDAp0fYHAAA8+ynR2BQAACN9qdH3ZMAAITap0fi0QAAvqGnR7/2AABAXqdHv/YAAHolp0fi0QAAcQmnR92TAAALE6dHYFAAAD4/p0fYHAAA/3+nR6MJAAD/fz/02T0AANCkP/TFSAAA8L0/9BBmAABmwz/0b4wAAHazP/SyrwAALpM/9KfEAADQbD/0p8QAAIhMP/SyrwAAmDw/9G+MAAAOQj/0EGYAAC5bP/TFSAAAp7lAtQEoAAAB4UC141UAAI7pQLX6kQAAl9BAtTLJAAAKnkC1BeoAAPRhQLUF6gAAZy9AtTLJAABwFkC1+pEAAP0eQLXjVQAAV0ZAtQEoAAD/f0C15xYAAP9///+eQQAAy6L///FLAACLuv//oWcAALS////liwAAo7D//zmtAAAhkv//CMEAAN1t//8IwQAAW0///zmtAABKQP//5YsAAHNF//+hZwAAM13///FLAAArnkjpNlMAAMOySOk4awAAPbdI6auKAAAtqkjpkacAALiPSOm+uAAARnBI6b64AADRVUjpkacAAMFISOmrigAAO01I6ThrAADTYUjpNlMAAP9/SOlCSgAAIJaQ0NtfAAD/f5DQS1kAADqlkNB3cQAAgqiQ0IeIAADunpDQuZ0AAIeLkNBRqgAAd3SQ0FGqAAAQYZDQuZ0AAHxXkNCHiAAAxFqQ0HdxAADeaZDQ218AAI2HiZfEdgAA/3+Jl4Z0AAC1jImXx3wAANSNiZenhAAAj4qJl+OLAADvg4mXMJAAAA98iZcwkAAAb3WJl+OLAAAqcomXp4QAAElziZfHfAAAcXiJl8R2AAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_2k7fp"]
resource_name = "花瓶_Cylinder"
_surfaces = [{
"aabb": AABB(-0.210994, -0.223658, -0.215903, 0.421989, 0.515279, 0.417694),
"attribute_data": PackedByteArray("CF+Gu7JlyLUHVsi1JmOIGRHtKq7ScogZEe2YtcdltLBee8i132nItdiGiBkR7Re/WnWIGRHty7bfd4CoEnXItRJ1yLUifIgZInyIGRHtA7oR7QO6tYWAqL2DyLW9g8i1BYWIGQWFiBkR7Tm+Ee05vlOV8qo4kci1OJHItS+NiBkvjYgZL42IGRHtGMIR7RjCdKvItQKj8bU7mci1Ee0KzUKkiBkJkogZEe1mxDuZyLV9pD3AO5nItRHtZsQJkogZCZKIGRHtZsTOlgbOOJHItTiRyLUvjYgZL42IGRHtGMIR7RjCc4aQ0r2DyLW9g8i1BYWIGQWFiBkR7Tm+Ee05vt93sdESdci1EnXItSJ8iBkifIgZEe0DuhHtA7rHZevHcXTItd9pyLXrf4gZEe3Ou1p1iBkR7cu2q02QhatNkIX/PZCF/z2QhSdnkIUnZ5CFqFWQhahVkIUXa5CFF2uQhRdrkIUXa5CFKYeQhSmHkIUph5CFKYeQhfSgkIX0oJCF9KCQhfSgkIWCwpCFgsKQhUmwkIVJsJCFSbCQhUmwkIVJsJCFSbCQhfSgkIX0oJCF9KCQhfSgkIUph5CFKYeQhSmHkIUph5CFF2uQhRdrkIUXa5CFF2uQhTpgkIU6YJCFqFWQhahVkIUGbPtqq29PNVpc+2r/X081sID7alWETzUyb/tq13JPNbN3+2qzd/tqWHtPNTaRTzXXgvtq14L7alqcTzVanE81E437ariQTzUTjftqlqZPNWKl+2oHqU81KZP7as6WTzUpk/tqzpZPNSmT+2rOlk81E437ariQTzUTjftqlqZPNdeC+2rXgvtqWpxPNVqcTzWzd/tqs3f7alh7TzU2kU81w3n7amh9TzUyb/tq13JPNUZqrJ1GaqydyFisnchYrJ2ibKydomysnaJsrJ2ibKydoYasnaGGrJ2hhqydoYasnYaerJ2Gnqydhp6snYaerJ3yvqyd8r6snbmsrJ25rKyduaysnbmsrJ25rKyduaysnYaerJ2Gnqydhp6snYaerJ2hhqydoYasnaGGrJ2hhqydomysnaJsrJ2ibKydomysnVljrJ1ZY6ydyFisnchYrJ1hUaydYVGsnbVBrJ21QaydmWoHIQ5siyHtWgchYlyLIUyAByHBgYshzm4HIUNwiyEXegchjHuLIRd6ByGMe4sh34gHId+IByFUioshVIqLIXSWByHpl4shdJYHIemXiyFgrIsh66oHIYeeByH8n4shJ5qLIbKYByGHngch/J+LIXSWByHpl4shdJYHIemXiyHfiAch34gHIVSKiyFUioshF3oHIYx7iyEXegchjHuLIV95ByHUeoshzm4HIUNwiyGTbsx4k27MeBRdzHgUXcx4wW7MeMFuzHjBbsx4wW7MeOeFzHjnhcx454XMeOeFzHgtm8x4LZvMeC2bzHgtm8x4C7rMeAu6zHjSp8x40qfMeNKnzHjSp8x40qfMeNKnzHgtm8x4LZvMeC2bzHgtm8x454XMeOeFzHjnhcx454XMeMFuzHjBbsx4wW7MeMFuzHimZ8x4pmfMeBRdzHgUXcx4flbMeH5WzHjSRsx40kbMeAhazx2CbZgdtGnPHdZdmB36gpgdfHGYHSx/zx2ubc8dJnyYHSZ8mB1YeM8dWHjPHR+KmB0fipgdUYbPHVGGzx1Rhs8d9paYHfaWmB0ok88dKJPPHfyqmB0Crc8dl56YHcmazx3DmJgdyZrPHcmazx2XnpgdKJPPHSiTzx32lpgd9paYHVGGzx1Rhs8dH4qYHR+KmB1YeM8dWHjPHSZ8mB0mfJgdP3jPHa5tzx0NfJgdfHGYHVKEuCTcgp8x03K4JF5xnzETfLgknnqfMRN8uCR8kJ8xMYi4JDGIuCSZnJ8xmZyfMVOTuCTdkZ8xU5O4JLunnzG0qp8xVaa4JPCZuCR7mJ8xe5ifMRyUuCTwmbgke5ifMVOTuCTdkZ8xU5O4JLunnzExiLgkMYi4JJmcnzGZnJ8xE3y4JJ56nzETfLgkfJCfMWV9uCTwe58x03K4JF5xnzFhb7gk622fMbVfuCRAXp8xNuZgtHrhF79d4WC0euHLtlPcYLR64SququBgtHrhmLU+42C0euEDuj7jYLR64QO6tOVgtHrhOb605WC0euE5vvfnYLR64RjC9+dgtHrhGMJ64QrNW+5gtE/pYLR64WbEeuFmxE/pYLRP6WC0euFmxPfnYLR64RjC9+dgtHrhGMK05WC0euE5vrTlYLR64Tm+PuNgtHrhA7o+42C0euEDukvkYLR64c67XeFgtHrhy7YD4la0p+ixuc/jsbkm4Va0O9+xuZLjsblU5Fa0c+SxuXPksbld51a0SuWxuUrlsbkm6la0EOaxuRDmsbmR67G5zutWtIXmsbmF5rG5zutWtIXmsbkm6la0EOaxuRDmsbld51a0SuWxuUrlsblU5Fa0c+SxuXPksbkD4la0vOaxuc/jsbnfaci1vYPItXSryLV0q8i1Ee0KzUKkiBm9g8i1vYPItQWFiBnXgvtqE437aimT+2opk/tq14L7akZqrJ3IWKydyFisnfK+rJ3yvqyduaysnd+IByHfiAchVIqLIaZnzHgUXcx4FF3MeH5WzHjSRsx4Aq3PHQKtzx205WC0euEKzffnYLR64RjCXeFgtErlsbkQ5rG5EOaxuQ=="),
"format": 34896613399,
"index_count": 714,
"index_data": PackedByteArray("LAEKAAUALAEwAQoAMQERAAwAMQE0AREANQEZABIANQE6ARkAOQEhABgAOAE+ASAAPQEpAB8APQFCASkAQAEvACgAQAFEAS8ARQE1ADAARQFHATUASAE8ADYASAFLATwATAFEAD0ATAFQAUQAKgCUASIAKgCaAZQBTwFMAEMATwFUAUwAUwEDAEoAUwEqAQMARwAHAAAABwAVAA4AFQAlABwAJQAyACwAMgBAADkAQAAHAEcABwAlABUAJQBAADIABwBAACUAywBRAHcAywDRAFEAxwB5AHMAxwDNAHkAxQB1AHEAxQDJAHUAwQBwAG0AwQDEAHAAvQBrAGkAvQC/AGsAtgBnAGMAtgC6AGcAswBlAF8AswC5AGUAsABhAFwAsAC1AGEArQBdAFkArQCxAF0AqQBXAFUAqQCrAFcAzwBTAE8AzwCnAFMAIgF8AKIAIgEoAXwAHgGkAJ4AHgEkAaQAGwGfAJsAGwEfAZ8AGAGaAJgAGAEaAZoAFAGWAJQAFAEWAZYADwGSAI4ADwETAZIACgGQAIoACgEQAZAABgGMAIYABgEMAYwAAwGHAIMAAwEHAYcAAAGCAIAAAAECAYIAJgF+AHoAJgH+AH4AAQCmAM4AAQAIAKYACQCqAKgACQAPAKoAEACvAKwAEAAXAK8AFgC0AK4AFgAeALQAHQC4ALIAHQAmALgAJAC7ALcAJAArALsALQC+ALwALQAzAL4ANADCAMAANAA6AMIAOwDIAMMAOwBCAMgAQQDMAMYAQQBJAMwASADQAMoASAACANAAewHUAPoAewGBAdQAdwH8APYAdwF9AfwAdAH4APMAdAF5AfgAcQHyAPAAcQFzAfIAbQHuAOwAbQFvAe4AaAHrAOcAaAFsAesAYwHoAOIAYwFpAegAXwHkAN4AXwFlAeQAXQHfANwAXQFgAd8AWQHaANgAWQFbAdoAfwHWANIAfwFXAdYATgD/ACcBTgBSAP8AVAAEAQEBVABWAAQBWAAJAQUBWABbAAkBWgANAQgBWgBgAA0BXgARAQsBXgBkABEBYgASAQ4BYgBmABIBaAAXARUBaABqABcBbAAcARkBbABuABwBbwAhAR0BbwB0ACEBcgAlASABcgB4ACUBdgApASMBdgBQACkB+wAtAVUB+wDVAC0B9wBWAVEB9wD9AFYB9QBSAU4B9QD5AFIB8QBNAUoB8QD0AE0B7QBJAUYB7QDvAEkB5gBDAT8B5gDqAEMB4wBBATsB4wDpAEEB4AA8ATYB4ADlADwB3QA3ATMB3QDhADcB2QAyAS8B2QDbADIB0wAuASsB0wDXAC4BewBYAYABewB/AFgBgQBcAVoBgQCEAFwBhQBiAV4BhQCJAGIBiABmAWEBiACNAGYBiwBqAWQBiwCRAGoBjwBrAWcBjwCTAGsBlQBwAW4BlQCXAHABmQB1AXIBmQCcAHUBnQB6AXYBnQChAHoBoAB+AXgBoAClAH4BowCCAXwBowB9AIIBowHGAaEBowHIAcYBIwCQARoAIwCWAZABCwCKAQYACwCEAYoBGwCOARQAGwCSAY4BBACsAUsABACIAawBEwCGAQ0AEwCMAYYBTQCoAUUATQCuAagBRgCmAT8ARgCqAaYBPgCiATgAPgCkAaIBNwCeATEANwCgAZ4BLgCXAScALgCbAZcBtQGyAa8BsgHKAc0BygHEAccBxAG/AcIBvwG4AbsBuAGyAbUBsgHEAcoBxAG4Ab8BsgG4AcQBmQG8AZMBmQHAAbwBiwGxAYUBiwG2AbEBqQHJAaUBqQHMAckBnAG+AZgBnAHBAb4BkQG3AY0BkQG6AbcBrQHLAacBrQHPAcsBnwHDAZ0BnwHFAcMBlQG5AY8BlQG9AbkBhwHOAasBhwGzAc4BgwG0AYkBgwGwAbQB"),
"lods": [0.223938, PackedByteArray("LAEKAAUALAEwAQoAMQEYAAwAMQE4ARgAOAEpABgAOAFCASkA7AHYAdUB7QFEAdgBRAFLATwASwFMADwASwFUAUwAKgCQARoAKgCaAZABGgCQAYYBGgCGAQ0AUwEDAEoAUwEqAQMARwAHAAAAOQAHAEcABwA5ACUABwAlABUA0gHoAdwB1gHoAdIB4QHTAdwB6AGaAJYAkgAkAZYA4gGSAI4AJAGkAJ4AJAGeAN0B5wF8AKIA5wEoAXwASADrAecBSAACAOsB3wHbAdoB3wHaAdkB3wHjAdsB0QHjAd8BFgAmAOMB0AHRAagAggDgAdkB4AGCAIAAJgF+AHoAJgHeAX4AAQAIAN4BAQDeAeoB1wFJAOkBewHUAPoAewGBAdQAdwH8APIAdwF9AfwAcwF3AfIAbwFzAfIAbQHyAOwAbQFvAeUBaAHrAOcAaAFsAesAYwHoAN4AYwFpAegAXwFjAd4AWwFfAd4AWQHeANgAWQFbAeQBfwHWANIAfwFXAdYA+wAtAVUB+wDVAC0B5gFWAU0B9AD9AFYB7QD0AE0B7QBNAUYB5gBDAT8B5gDqAEMB4ABBATYB4ADpAEEB2QDgADYB2QA2AS8B0wAuASsB0wDXAC4BewBYAYABewB/AFgBgQBcAVoBgQCEAFwBhQBhAV4BhQCIAGEBiABmAWEBiACNAGYBiwBqAWQBiwCRAGoBjwBrAWcBjwCTAGsBkwBwAWsBkwCXAHABmQB1AXIBmQCcAHUBnAB6AXUBnAChAHoBoAB+AXgBoAClAH4BowCCAXwBowB9AIIBCwCKAQYACwCEAYoBBACsAUsABACIAawBTQDxAT4ATQCuAfEBPgCgAe8BPgCXAdQBuAGyAa8BsgG4AcQBxAG4Ab8BsgHEAc0BmQHzAY8BmQHAAfMBjwHzAbEB7gGxAYUBnwG+AZgBnwH0Ab4B8gH0AfAB8gHPAfUBhwHOAasBhwGzAc4BgwG0AYkBgwGwAbQB")],
"material": SubResource("StandardMaterial3D_radro"),
"name": "Material.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 502,
"vertex_data": PackedByteArray("/38AAGA+xi//fwAAYD72FP9/AABgPsD0/3/59EtZRfr/f/n0S1ksP/9/+fRLWYhU/3/59EtZ0sCHpAAANkkGLIekAAA2SfYUh6QAADZJOhMglvn021+IVCCW+fTbX9LAIJb59NtfZEoglvn0218Px3a9AABIZvAtdr0AAEhmOhN2vQAASGbuDzql+fR3cWRKOqX59Hdxdjo6pfn0d3EPxzql+fR3cQ7S4sIAAFyMhSriwgAAXIxcC+LCAABcjO4Pgqj59IeI5yeCqPn0h4h2OoKo+fSHiAfggqj59IeIDtIQswAAWa/BIxCzAABZr+cFELMAAFmvXAvunvn0uZ0tFO6e+fS5neYn7p759Lmd5yfunvn0uZ2n7+6e+fS5nQfgCZMAACXELpUJkwAAJcTzJwmTAAAlxOcFh4v59FGqAACHi/n0Uar51YeL+fRRqi0Uh4v59FGqp+/1bAAAJcQulfVsAAAlxHcX9WwAACXERZ93dPn0UaoAAHd0+fRRqvnVd3T59FGq1dd3dPn0UapXEO5MAABZr5ko7kwAAFmvRZ/uTAAAWa+lshBh+fS5ndXXEGH59LmdI90QYfn0uZ1XEBBh+fS5nfcfHD0AAFyMZSkcPQAAXIylshw9AABcjCjIfFf59IeII918V/n0h4gz5XxX+fSHiPcffFf59IeI8C2IQgAASGZeK4hCAABIZlXeiEIAAEhmKMjEWvn0d3Eu78Ra+fR3cTPlxFr59Hdx7zjEWvn0d3HwLXdbAAA2SUMvd1sAADZJwPR3WwAANklV3t5p+fTbX0X63mn59NtfLD/eafn0218u795p+fTbX+84/39PjwAAsxH/f0+PAAAzBP9/T48AAKT0/39PjwAAYPTpxU+PvRSzEenFT4+9FDME6cVPj70UPhDpxU+PvRTcA6D1T49fTD4QoPVPj19M3AOg9U+PX0x4DaD1T49fTDUD//9PjzyVnQn//0+PPJV4Df//T488lUsC//9PjzyVNQO64U+PMtgABbrhT48y2DIBuuFPjzLYnQm64U+PMthLAm6kT4///+GRbqRPj///PoRupE+P//8ABW6kT4///zIBkFtPj///4ZGQW0+P//8+hJBbT4///zKdkFtPj///pJdEHk+PMtgynUQeT48y2KSXRB5PjzLYgLFEHk+PMti2rgAAT488lYCxAABPjzyVfscAAE+PPJW2rgAAT488lejFXgpPj19M+t1eCk+PX0wj3V4KT49fTH7HXgpPj19M6MUVOk+PvRSk9BU6T4+9FGD0FTpPj70U+t0VOk+PvRQj3f9/UN7MTs0g/39Q3sxOjQz/f1DezE5Q9f9/UN7MToD0vptQ3gdXzSC+m1DeB1eNDL6bUN4HVwIevptQ3gdXhwuurlDeG20CHq6uUN4bbcEYrq5Q3htthwuurlDeG22RCcuyUN4FipMRy7JQ3gWKwRjLslDeBYrWBsuyUN4FipEJyKZQ3pikGwnIplDemKSPA8imUN6YpJMRyKZQ3pik1gZ0jlDeZLQooXSOUN5ktK6MdI5Q3mS0Gwl0jlDeZLSPA4pxUN5ktCihinFQ3mS0royKcVDeZLQhqIpxUN5ktGuaNllQ3pikIag2WVDemKRrmjZZUN6YpA64NllQ3pikDbAzTVDeBYoOuDNNUN4FimvLM01Q3gWKDbAzTVDeBYqqxlBRUN4bbRngUFFQ3htta8tQUVDeG22J3VBRUN4bbarGQGRQ3gdXUPVAZFDeB1eA9EBkUN4HVxngQGRQ3gdXid3AwKdH2Bz2FMDAp0fYHDMEwMCnR9gcOhPAwKdH2BzcA/Psp0dgUDoT8+ynR2BQ3APz7KdHYFDuD/Psp0dgUDUDjfanR92TXAuN9qdH3ZPuD432p0fdk0sCjfanR92TNQOE2qdH4tHnBYTap0fi0TIBhNqnR+LRXAuE2qdH4tFLAr6hp0e/9j6EvqGnR7/2LpW+oadHv/bnBb6hp0e/9jIBQF6nR7/2PoRAXqdHv/YulUBep0e/9kWfQF6nR7/2pJd6JadH4tFFn3olp0fi0aSXeiWnR+LRpbJ6JadH4tG2rnEJp0fdk6WycQmnR92TKMhxCadH3ZO2rnEJp0fdk+jFCxOnR2BQVd4LE6dHYFAj3QsTp0dgUCjICxOnR2BQ6MU+P6dH2BzA9D4/p0fYHGD0Pj+nR9gcVd4+P6dH2Bwj3f9/p0ejCfYU/3+nR6MJMwT/f6dHownA9P9/p0ejCWD0/38/9Nk9GB3/fz/02T3dCf9/P/TZPRz1/38/9Nk9cvTQpD/0xUgYHdCkP/TFSN0J0KQ/9MVIpBrQpD/0xUgPCfC9P/QQZqQa8L0/9BBmDwnwvT/0EGYDFvC9P/QQZoYHZsM/9G+Mpg9mwz/0b4wDFmbDP/RvjGEFZsM/9G+Mhgd2sz/0sq8eCHazP/Syr80CdrM/9LKvpg92sz/0sq9hBS6TP/SnxPeJLpM/9KfEZ50ukz/0p8QeCC6TP/SnxM0C0Gw/9KfE94nQbD/0p8RnndBsP/SnxC2l0Gw/9KfEQpmITD/0sq8tpYhMP/Syr0KZiEw/9LKvKraITD/0sq97r5g8P/RvjCq2mDw/9G+MQsqYPD/0b4x7r5g8P/RvjFfGDkI/9BBmeN8OQj/0EGZe3Q5CP/QQZkLKDkI/9BBmV8YuWz/0xUgc9S5bP/TFSHL0Lls/9MVIeN8uWz/0xUhe3ae5QLUBKM0gp7lAtQEosxGnuUC1ASgCHqe5QLUBKD4QAeFAteNVAh4B4UC141XBGAHhQLXjVT4QAeFAteNVeA2O6UC1+pGTEY7pQLX6kcEYjulAtfqRnQmO6UC1+pF4DZfQQLUyyRsJl9BAtTLJAAWX0EC1MsmTEZfQQLUyyZ0JCp5AtQXq4ZEKnkC1BeoooQqeQLUF6hsJCp5AtQXqAAX0YUC1BerhkfRhQLUF6iih9GFAtQXqIaj0YUC1BeoynWcvQLUyySGoZy9AtTLJMp1nL0C1MskOuGcvQLUyyYCxcBZAtfqRDrhwFkC1+pFry3AWQLX6kYCxcBZAtfqRfsf9HkC141UZ4P0eQLXjVWvL/R5AteNV+t39HkC141V+x1dGQLUBKFD1V0ZAtQEopPRXRkC1ASgZ4FdGQLUBKPrd/39AtecWzSD/f0C15xazEf9/QLXnFlD1/39AtecWpPT/f///nkFF+v9///+eQd0J/3///55BiFT/f///nkFy9Mui///xS90Jy6L///FLDwnLov//8UuIVMui///xS2RKi7r//6FnDwmLuv//oWeGB4u6//+hZ2RKi7r//6Fndjq0v///5YthBbS////li4YHtL///+WL5ie0v///5YvnJ7S////li3Y6o7D//zmtzQKjsP//Oa1hBaOw//85rS0Uo7D//zmt5ichkv//CMH3iSGS//8IwfnVIZL//wjBzQIhkv//CMEtFN1t//8IwfeJ3W3//wjB+dXdbf//CMHV191t//8IwUKZW0///zmt1ddbT///Oa0j3VtP//85rUKZW0///zmte69KQP//5Ysj3UpA///lizPlSkD//+WLe69KQP//5YtXxnNF//+hZy7vc0X//6FnM+VzRf//oWde3XNF//+hZ1fGM13///FLRfozXf//8Usu7zNd///xS3L0M13///FLXt0rnkjpNlMYHSueSOk2U40MK55I6TZTpBornkjpNlOHC8OySOk4a6Qaw7JI6ThrhwvDskjpOGsDFsOySOk4a5EJPbdI6auKpg89t0jpq4oDFj23SOmritYGPbdI6auKkQktqkjpkaceCC2qSOmRp48DLapI6ZGnpg8tqkjpkafWBriPSOm+uK6MuI9I6b64Z524j0jpvrgeCLiPSOm+uI8DRnBI6b64roxGcEjpvrhnnUZwSOm+uC2lRnBI6b64a5rRVUjpkactpdFVSOmRp2ua0VVI6ZGnKrbRVUjpkacNsMFISOmriiq2wUhI6auKQsrBSEjpq4oNsMFISOmriqrGO01I6ThreN87TUjpOGuJ3TtNSOk4a0LKO01I6ThrqsbTYUjpNlMc9dNhSOk2U4D002FI6TZTeN/TYUjpNlOJ3f9/SOlCShgd/39I6UJKjQz/f0jpQkoc9f9/SOlCSoD0IJaQ0NtfipIglpDQ21/SwCCWkNDbX5+lIJaQ0NtfD8f/f5DQS1kNAv9/kNBLWSw//3+Q0EtZipL/f5DQS1nSwDqlkNB3cZ+lOqWQ0HdxD8c6pZDQd3GluzqlkNB3cQ7SgqiQ0IeIRtKCqJDQh4gH4IKokNCHiKW7gqiQ0IeIDtLunpDQuZ0Z6e6ekNC5nafv7p6Q0LmdRtLunpDQuZ0H4IeLkNBRqgAAh4uQ0FGqfQ6Hi5DQUaoZ6YeLkNBRqqfvd3SQ0FGqAAB3dJDQUap9Dnd0kNBRquUNd3SQ0FGqVxAQYZDQuZ3lDRBhkNC5nVcQEGGQ0LmdKwwQYZDQuZ33H3xXkNCHiCsMfFeQ0IeI9x98V5DQh4h1CXxXkNCHiPAtxFqQ0Hdx/gXEWpDQd3HvOMRakNB3cXUJxFqQ0Hdx8C3eaZDQ218NAt5pkNDbXyw/3mmQ0Ntf/gXeaZDQ21/vOI2HiZfEdv+/jYeJl8R2ipKNh4mXxHafpf9/iZeGdP+//3+Jl4Z0DQL/f4mXhnSKkrWMiZfHfP+/tYyJl8d8n6W1jImXx3ylu9SNiZenhP+/1I2Jl6eERtLUjYmXp4Slu4+KiZfji/+/j4qJl+OLGemPiomX44tG0u+DiZcwkH0O74OJlzCQ/7/vg4mXMJAZ6Q98iZcwkH0OD3yJlzCQ/78PfImXMJDlDW91iZfji/+/b3WJl+OL5Q1vdYmX44srDCpyiZenhP+/KnKJl6eEKwwqcomXp4R1CUlziZfHfP+/SXOJl8d8/gVJc4mXx3x1CXF4iZfEdv+/cXiJl8R2DQJxeImXxHb+BYekAAA2SYMa4sIAAFyMAAAJkwAAJcTtnQmTAAAlxMqSh4v59FGqVxCHi/n0UapY7Rw9AABcjLOqHD0AAFyM5sR8V/n0h4j//8uyUN4FigAAyKZQ3pikAAB0jlDeZLQAAIpxUN5ktF+ZM01Q3gWK5M3AwKdH2BwBC8DAp0fYHDIjwMCnR9gcxg6+oadHv/Yejr6hp0e/9oeUvqGnR7/2AABmwz/0b4wAAJg8P/RvjHuvmDw/9G+MLbtXRkC1ASjd9FdGQLUBKCPKV0ZAtQEo/dz/f0C15xb3Bv9/QLXnFmD0IZL//wjBH+whkv//CMF54YKokNCHiIHEh4uQ0FGqthkQYZDQuZ33JRBhkNC5nYwr3mmQ0NtfAADUjYmXp4SZ0m91iZfji0Ebb3WJl+OL3TtNJ5rOJAS1kyRiPvzBimmqSg5KDpjbOpe08bTx1Cmn0yQEtZPZCeOumNs6l7TxtPGTuJOtcuFy4ZQoKdHZCeOuEQ70wpO4k62ypaC5cuFy4WnXadfBKoHV1hHl1BEO9MIkmEbCsqWguY/Pj89p12nXhC4I3dQV5efWEeXUSozYySSYR8IkmEbCMMgwyI/Pj88AAP9/Pyx/2NQV5ef/v/+/////f0qM2MkwyDDIAAD/f3w0+ejvOpzK/7//v////3+p15aOzjfON+ErwtfvOpzKMkx14KnXlo7GvzuXzjfON28wbzBrK9fWMkx14IhVSOzGvzuXk63QnW8wbzCVKJUoPCp41EFcyvSIVUjs4pzbo5Ot0J2MHowelSiVKKsnVs8kYj78QVzK9MGKaapKDkoO4pzbo4wejB7a7H2D1QDQkESD+eXLeBf/2ux9g9UA0JAf0l2IDwKKqR/SXYgPAoqpI74CjAYDCr0WrE2PI74CjPADds8GAwq9x5jSkvUEEeQWrE2P8AN2z////38AAP9/x5jSkvUEEeT///9/AAD/fwqxjcAWaIPtCrGNwBZog+1LnITR8XDV9kuchNF3kV7a8XDV9qV0ufrWiZrg9nYp/XeRXtqldLn6RIP55ct4F//WiZrg9nYp/Sfqk4Z5AkCST4W71YVsjP0n6pOGeQJAkmjNPI8ABj6saM08jyO5VpUABj6ssAgTwKqnmpojuVaVKQtJ0rAIE8DJlfyf2A0V5qqnmpopC0nS////fwAA/3/Jlfyf2A0V5v///38AAP9/z8AmrK5LjdfPwCasrkuN19io5rxaW7Dp2KjmvH2a7sZaW7DpAGOI8nmPoc59mu7GLmiH+ABjiPJPhbvVhWyM/XmPoc4uaIf4JAS1k9UA0JDZCeOuDwKKqdkJ464PAoqpEQ70wgYDCr3WEeXUEQ70wvADds8GAwq91BXl5/UEEeTWEeXU8AN2zwAA/38AAP9/1BXl5/UEEeQAAP9/AAD/f+86nMoWaIPt7zqcyhZog+0yTHXg8XDV9jJMdeCIVUjs8XDV9qV0ufpBXMr09nYp/YhVSOyldLn6JGI+/Mt4F/9BXMr09nYp/SQEtZPVANCQJGI+/Mt4F//MBSiVNO7ygWdZJfv7gTfwzAUolTTu8oGKDWyxm9S/hIoNbLGb1L+EFROkxd/A6IbqF0bXFROkxZau6YjfwOiG6ByB6YeaG4vqF0bXlq7piP///38AAP9/6ByB6YeaG4v///9/AAD/fxEwNcLCogbTETA1wsKiBtMmQbzZoJJk4SZBvNkYS3DnoJJk4RaLG+iXUsLxF4aO7BhLcOcWixvoZ1kl+/uBN/CXUsLxF4aO7Cfqk4ba7H2DaM08jx/SXYhozTyPI7lWlR/SXYgjvgKMqqeamiO5VpUWrE2PI74CjMmV/J/HmNKSqqeamhasTY////9/////f8mV/J/HmNKS////f////3/PwCasCrGNwM/AJqwKsY3A2KjmvEuchNHYqOa8fZruxkuchNF3kV7aeY+hzn2a7sbWiZrgd5Fe2k+Fu9VEg/nleY+hztaJmuAn6pOG2ux9g0+Fu9VEg/nlwYppqjTu8oGY2zqX+4E38DTu8oGb1L+EmNs6l5O4k62b1L+E38DohpO4k62ypaC5lq7piN/A6IYkmEfCJJhGwrKloLmHmhuLlq7piEqM2MkkmEfC////f////3+HmhuLSozYyf///3////9/qdeWjsKiBtOp15aOxr87l8KiBtOgkmThxr87l5Ot0J2gkmThFosb6OKc26OTrdCdF4aO7BaLG+jBimmq4pzbo/uBN/AXho7szAUolXkCQJKKDWyxAAY+rIoNbLEABj6sFROkxbAIE8DqF0bXFROkxSkLSdKwCBPA6ByB6dgNFebqF0bXKQtJ0gAA/38AAP9/6ByB6dgNFeYAAP9/AAD/fxEwNcKuS43XETA1wq5LjdcmQbzZWluw6SZBvNkYS3DnWluw6QBjiPKXUsLxLmiH+BhLcOcAY4jyZ1kl+4VsjP2XUsLxLmiH+MwFKJV5AkCSZ1kl+4VsjP3Zwa20tPG08QOgW9Fy4XLh541gkUoOSg7Zwa20tPG08QOgW9Fy4XLhI5NG3GnXaddpi9Lij8+PzyOTRtxp12nXeoXZ5zDIMMhpi9Lij8+Pz/+//7////9/eoXZ5zDIMMj/v/+/////fxDfA4XON843EN8Dhc43zjfMyGiIbzBvMMzIaIhvMG8wM7Y9i5UolSi4ow6OjB6MHjO2PYuVKJUo541gkUoOSg64ow6OjB6MHv///3/Zwa20A6Bb0f///3/njWCR2cGttP///38DoFvRI5NG3P///39pi9LiI5NG3P///396hdnnaYvS4v///3////9/eoXZ5////3////9/EN8Dhf///38Q3wOFzMhoiP///3/MyGiIM7Y9i////3+4ow6OM7Y9i////3/njWCRuKMOjs8KkK+KD6nZSk1JzTEuMK7ON843/38AAFdkSO8pSd7h0azVs5ikTofUfPYN636TE+abF+QPqvO1Vwv7ZW8u8TTq1dGCiEGIwf///3+vQWEHnqQHcaCSZOGHkijgJoT23mt/+/FZbSb6HR9gq4x4D///fwAAj+ePZ8KIFOBvM28z+sUNXh8qHyrHnYpnZ4xI4BPPRmcKy25r")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_i3lt2")

[sub_resource type="BoxShape3D" id="BoxShape3D_04hlb"]
size = Vector3(0.5, 0.535352, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_6dhiw"]
size = Vector3(0.5, 0.53418, 0.5)

[node name="花瓶" type="RigidBody3D" node_paths=PackedStringArray("mesh")]
collision_layer = 4
collision_mask = 7
contact_monitor = true
max_contacts_reported = 4
script = ExtResource("1_ibinw")
mesh = NodePath("Cylinder")

[node name="Cylinder" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_2k7fp")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0323242, 0)
shape = SubResource("BoxShape3D_04hlb")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0329102, 0)
shape = SubResource("BoxShape3D_6dhiw")

[node name="Broken" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_25tgq")
bus = &"SFX"

[node name="Destruction" type="Node" parent="." node_paths=PackedStringArray("shard_container", "rig")]
script = ExtResource("6_224lq")
fragmented = ExtResource("7_t2n7h")
shard_container = NodePath("../..")
fade_delay = 5.0
shrink_delay = 5.0
animation_length = 10.0
collision_layer = 16
collision_mask = 2
rig = NodePath("..")

[node name="CarryableComponent" type="Node3D" parent="."]
script = ExtResource("6_4137t")
drop_distance = 2.0
input_map_action = "interact"
interaction_text = "拿"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
